[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/dropped_items/DroppedItems.gd" type="Script" id=1]
[ext_resource path="res://UI/Font Resources/Wendy-10.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/dropped_items/background.png" type="Texture" id=3]
[ext_resource path="res://UI/dropped_items/coin.png" type="Texture" id=4]
[ext_resource path="res://UI/dropped_items/blue_dot.png" type="Texture" id=5]

[node name="DroppedItems" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 62.0
margin_bottom = 62.0
texture = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 62.0
margin_bottom = 62.0
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 58.0
margin_bottom = 58.0
custom_constants/separation = 1

[node name="YouObtained" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer"]
margin_right = 56.0
margin_bottom = 9.0
custom_fonts/font = ExtResource( 2 )
text = "You Obtained"
align = 1

[node name="CoinsDropped" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 10.0
margin_right = 56.0
margin_bottom = 20.0
custom_constants/separation = 1
alignment = 1

[node name="LeftDot" type="TextureRect" parent="MarginContainer/MarginContainer/VBoxContainer/CoinsDropped"]
margin_left = 14.0
margin_top = 4.0
margin_right = 16.0
margin_bottom = 6.0
size_flags_vertical = 4
texture = ExtResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer/CoinsDropped"]
margin_left = 17.0
margin_right = 39.0
margin_bottom = 10.0
custom_constants/separation = 0

[node name="CoinAmount" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/CoinsDropped/HBoxContainer"]
margin_right = 12.0
margin_bottom = 9.0
custom_fonts/font = ExtResource( 2 )
text = "500"

[node name="Coin" type="TextureRect" parent="MarginContainer/MarginContainer/VBoxContainer/CoinsDropped/HBoxContainer"]
margin_left = 12.0
margin_right = 22.0
margin_bottom = 10.0
texture = ExtResource( 4 )

[node name="RightDot" type="TextureRect" parent="MarginContainer/MarginContainer/VBoxContainer/CoinsDropped"]
margin_left = 40.0
margin_top = 4.0
margin_right = 42.0
margin_bottom = 6.0
size_flags_vertical = 4
texture = ExtResource( 5 )

[node name="ItemsDropped" type="GridContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
margin_left = 28.0
margin_top = 21.0
margin_right = 28.0
margin_bottom = 21.0
size_flags_horizontal = 4
custom_constants/vseparation = 2
columns = 3

[node name="AutoClose" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="timeout" from="AutoClose" to="." method="_on_AutoClose_timeout"]
